<resources>
    <string name="app_name">HC2</string>
    <!--Bottom Navigation-->
    <string name="title_history">Журнал</string>
    <string name="title_today">На сегодня</string>
    <string name="title_allMeds">Все лекарства</string>
    <!--UpBar-->
    <string name="title_saveMed">Сохранить</string>
    <string name="title_addMedActivity">Добавление лекарства</string>
    <!--Accept Activity-->
    <string name="title_accept">Принять</string>
    <string name="title_ignore">Пропустить</string>
    <string name="pretext_from">с</string>
    <string name="pretext_to">по</string>
    <!--AddMed Activity-->
    <string name="title_medName">Название</string>
    <string name="title_hint_medName">Название лекарства</string>
    <string name="title_dose">Доза</string>
    <string name="title_addDose">Добавить время и дозу</string>
    <string name="title_plan">План приема</string>
    <string name="title_x">X:</string>
    <string name="title_y">Y:</string>
    <string name="title_hours">Каждые </string>
    <string name="title_medType">Единицы измерения</string>
    <string name="title_startDate">Дата начала</string>
    <string name="title_finalDate">Дата окончания</string>
    <string name="title_hint_dialogPicker">Установить…</string>
    <string name="title_whenToTake">Принимать</string>
    <string name="title_adminMethod">Способ применения</string>
    <string name="title_remAmount">Осталось лекарств</string>
    <string name="title_note">Дополнительно</string>
    <string-array name="list_medType">
        <item>таблетки</item>
        <item>г</item>
        <item>мг</item>
        <item>мл</item>
        <item>инъекций</item>
        <item>капель</item>
        <item>ингаляций</item>
    </string-array>
    <string-array name="list_plan">
        <item>Ежедневно</item>
        <item>Интервал дней</item>
        <item>X через Y дней</item>
        <item>Каждые X часов</item>
    </string-array>
    <string-array name="list_whenToTake">
        <item>Не важно</item>
        <item>До еды</item>
        <item>Во время еды</item>
        <item>После еды</item>
    </string-array>
    <string-array name="list_adminMethod">
        <item>Перорально (внутрь)</item>
        <item>Сублингвально (под язык)</item>
        <item>Буккально ( за щеку)</item>
        <item>Наружно</item>
        <item>Ректально</item>
        <item>Внутривенно</item>
        <item>Внутримышечно</item>
        <item>Подкожно</item>
        <item>Внутриартериально</item>
        <item>Ингаляционно</item>
    </string-array>
    <string-array name="list_hours">
        <item>0.5 часа</item>
        <item>1 час</item>
        <item>1.5 часа</item>
        <item>2 часа</item>
        <item>3 часа</item>
        <item>4 часа</item>
        <item>6 часов</item>
        <item>8 часов</item>
        <item>12 часов</item>
    </string-array>
    <!--Add Dose and Time Dialog-->
    <string name="title_ok">Ок</string>
    <string name="title_cancel">Отмена</string>
    <string name="val_defaultDose">1.00</string>
    <!--Empty Hints Dialog-->
    <string name="empty_dialog_header">Данные не заполнены</string>
    <string name="hint_empty_name">Добавьте название лекарства</string>
    <string name="hint_empty_doseTimeList">Добавьте время приема</string>
    <string name="hint_empty_finalDate">Добавьте дату окончания приема</string>
    <!--Lorem Ipsum-->
    <string name="default_name">Название</string>
    <string name="default_doseTyped">1.00 тип</string>
    <string name="default_time">10:20</string>
    <string name="default_date">20/01/2018</string>
    <string name="default_adminMethod">Перорально (внутрь)</string>
    <string name="default_whenToTake">После еды</string>
    <string name="default_note">Дополнительная информация</string>

</resources>
