<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/item_padding">

    <LinearLayout
        android:id="@+id/item_headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/item_today_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/default_name"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/title_item_bigTextSize"
            android:textStyle="bold" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/item_today_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/default_time"
            android:textAlignment="textEnd"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/title_item_bigTextSize"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/item_today_dose"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/default_doseTyped"
        android:textAlignment="textEnd"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/title_item_textSize" />

</LinearLayout>