<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.yurez.hc2.AcceptActivity">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"

            android:layout_height="0dp"
            android:fillViewport="true"
            android:paddingBottom="@dimen/activity_vertical_padding"
            android:paddingEnd="@dimen/activity_horizontal_padding"
            android:paddingStart="@dimen/activity_horizontal_padding"
            android:paddingTop="@dimen/activity_vertical_padding"
            android:scrollbars="none"
            app:layout_constraintBottom_toTopOf="@id/acc_buttonsLayout"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <!--
            <TextView
                android:id="@+id/acc_medNameValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/main_margin"
                android:ellipsize="end"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/title_medName"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/title_acc_bigTextSize"
                android:textStyle="bold" />
                -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/main_margin"
                    android:layout_marginTop="@dimen/main_margin"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/acc_doseValue"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:text="@string/title_dose"
                        android:textColor="@color/accent"
                        android:textSize="@dimen/title_acc_midTextSize"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/acc_timeValue"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="end"
                        android:layout_weight="1"
                        android:text="10:20"
                        android:textAlignment="textEnd"
                        android:textColor="@color/accent"
                        android:textSize="@dimen/title_acc_midTextSize"
                        android:textStyle="bold" />

                </LinearLayout>

                <TextView
                    android:id="@+id/acc_whenToTakeValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/main_margin"
                    android:text="После еды"
                    android:textColor="@color/primary_text" />

                <TextView
                    android:id="@+id/acc_adminMethodValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Перорально (внутрь)"
                    android:textColor="@color/primary_text" />

                <View style="@style/DividerH" />

                <TextView
                    android:id="@+id/acc_planTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/main_margin"
                    android:text="@string/title_plan"
                    android:textSize="@dimen/title_textSize"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/acc_datesValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/main_margin"
                    android:text="с 11.01.18 по 23.02.2018"
                    android:textColor="@color/primary_text" />

                <TextView
                    android:id="@+id/acc_noteValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/main_margin"
                    android:text="Дополнительная информация"
                    android:textColor="@color/primary_text" />

                <TextView
                    android:id="@+id/acc_remAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/main_margin"
                    android:text="@string/title_remAmount"
                    android:textColor="@color/primary_text" />

            </LinearLayout>


        </android.support.v4.widget.NestedScrollView>


        <LinearLayout
            android:id="@+id/acc_buttonsLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/acc_bar_height"
            android:layout_gravity="bottom"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/acc_ignoreBtn"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/negative"
                android:text="@string/title_ignore"
                android:textSize="@dimen/title_acc_midTextSize" />

            <Button
                android:id="@+id/acc_acceptBtn"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/positive"
                android:text="@string/title_accept"
                android:textSize="@dimen/title_acc_midTextSize"/>
        </LinearLayout>

</android.support.constraint.ConstraintLayout>
