<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.yurez.hc2.addMedActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/medNameTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:labelFor="@id/medNameEdit"
                android:text="@string/title_medName"
                android:textSize="22sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5" />

            <EditText
                android:id="@+id/medNameEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10"
                android:hint="@string/title_hint_medName"
                android:inputType="text"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/doseTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="0.5"
                    android:labelFor="@id/doseEdit"
                    android:text="@string/title_dose"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2" />

                <EditText
                    android:id="@+id/doseEdit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:maxLength="6"
                    android:textAlignment="textEnd" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2" />

                <Spinner
                    android:id="@+id/medTypePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="0.5"
                    android:entries="@array/list_medType"
                    android:spinnerMode="dialog"
                    android:textSize="18sp" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5" />

            <TextView
                android:id="@+id/planTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:labelFor="@id/planPicker"
                android:text="@string/title_plan"
                android:textSize="22sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/planPicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:entries="@array/list_plan"
                android:spinnerMode="dialog" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5" />

            <TextView
                android:id="@+id/whenToTakeTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:labelFor="@id/whenToTakePicker"
                android:text="@string/title_whenToTake"
                android:textSize="22sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/whenToTakePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:entries="@array/list_whenToTake"
                android:spinnerMode="dialog" />

            <Spinner
                android:id="@+id/adminMethodPicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:entries="@array/list_adminMethod"
                android:spinnerMode="dialog" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/remainingAmountTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_weight="0.5"
                    android:labelFor="@id/remainingAmountEdit"
                    android:text="@string/title_remainingAmount"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2" />

                <EditText
                    android:id="@+id/remainingAmountEdit"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="4"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:maxLength="6"
                    android:textAlignment="textEnd" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5" />

                <TextView
                    android:id="@+id/medTypeTitle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="2.5"
                    android:textAlignment="center"
                    android:textSize="18sp" />

            </LinearLayout>


        </LinearLayout>




    </ScrollView>



</android.support.constraint.ConstraintLayout>
